:hammer: Adicionado rotas para exercicio
